--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 <body>
     
     <h1>Bienvenidos a JS ;)</h1>
+
+    <script>
+        console.log('hola desde index.html')
+    </script>
+
+    <script src="main.js"></script>
 </body>
 </html>
