class 11 js function 2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     
     <h1>Bienvenidos a JS ;)</h1>
 
+    <h2>Hola tu impuesto como unipersonal es:</h2>
+    <h3> <span id="impuesto">x</span> USD</h3>
+
     <script>
         console.log('hola desde index.html')
     </script>
