--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .dado{
+            border: 1px solid #000;
+            width: 100px;
+            height: 100px;
+            display: block;
+            font-size: 60px;
+            text-align: center;
+            line-height: 100px;
+            border-radius: 5px;
+            box-shadow: #000 7px 7px 8px;
+        }
+    </style>
 </head>
 <body>
     
     <h1>Bienvenidos a JS ;)</h1>
+    <span>
+        Pagina con ejemplos
+    </span>
     
     <h2 id="title">Titulo</h2>
 
@@ -15,7 +31,15 @@
     <p onclick="cambiarTitulo()"> text 2</p>
     <p class="text"> text 3</p>
 
-    <button onclick="cambiarTitulo()">cambair titulo</button>
+    <button onclick="cambiarTitulo()">cambiar titulo</button>
+
+    <br><br><br>
+    <div>
+        <p>Dado 1: <span class="dado" id="dado1">0</span> </p>
+        <p>Dado 2: <span class="dado" id="dado2">0</span> </p>
+        <button onclick="lanzarDados()">Lanzar</button>
+
+    </div>
 
     <script src="main.js"></script>
 </body>
